[gd_scene load_steps=2 format=3 uid="uid://cnaxnqxobcchc"]

[ext_resource type="Script" uid="uid://cnvrc124p5qxt" path="res://scripts/hub.gd" id="1_ha6g5"]

[node name="Hub" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -781.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ha6g5")

[node name="PlayerMoney" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Current Player Money:"

[node name="PlayerProperties" type="Label" parent="."]
layout_mode = 2
text = "Player Properties:"

[node name="VFlowContainer" type="VBoxContainer" parent="."]
layout_mode = 2
